* 06617ba 2015-06-15 | Working version of tasks command (HEAD, origin/development, origin/HEAD, development) [Kostya Zolotarov]
* cae9914 2015-06-14 | Half-finished version of tasks command (i'm tired and its late) [Kostya Zolotarov]
* a2c2637 2015-05-23 | Fixed package name [Kostya Zolotarov]
* 5f969a6 2015-05-23 | Added build to instal/uninstall scripts [Kostya Zolotarov]
* 1451071 2015-05-23 | Activated build script [Kostya Zolotarov]
* adfcaad 2015-05-23 | Added TODO parsing [Kostya Zolotarov]
* 505ea37 2015-05-23 | Added build and tasks scripts; Added license to all the scripts [Kostya Zolotarov]
* 298826f 2015-05-23 | Created uninstall script [Kostya Zolotarov]
* 1fbe78c 2015-05-20 | Added cpp template [Kostya Zolotarov]
* e723f9a 2015-05-20 | Added branching model description [Kostya Zolotarov]
* 0bfdfdd 2015-05-20 | Added license [Kostya Zolotarov]
* 1d99bf7 2015-05-20 | Aliased 'git commit' [Kostya Zolotarov]
* 074e008 2015-05-19 | Added install script [Kostya Zolotarov]
* fe5322d 2015-05-19 | Added CHANGELOG maintenance script [Kostya Zolotarov]
* d0cc87c 2015-05-19 | Added FILES maintenance script [Kostya Zolotarov]
* f9e4abb 2015-05-19 | Formatted background text and updated authors maintenance script [Kostya Zolotarov]
* 364bfab 2015-05-19 | Added authors maintenance script [Kostya Zolotarov]
* 434426e 2015-05-19 | Added bash, c, java, python and ruby templates [Kostya Zolotarov]
* 80eeddc 2015-05-19 | Added high level background [Kostya Zolotarov]
* e4b1dfd 2015-05-19 | Initialized repository [Kostya Zolotarov]