@@ -1,4 +1,5 @@
-* 06617ba 2015-06-15 | Working version of tasks command (HEAD, origin/development, origin/HEAD, development) [Kostya Zolotarov]
+* 6829f68 2015-06-18 | Added setup command (HEAD, origin/development, origin/HEAD, development) [Kostya Zolotarov]
+* 06617ba 2015-06-15 | Working version of tasks command [Kostya Zolotarov]
 * cae9914 2015-06-14 | Half-finished version of tasks command (i'm tired and its late) [Kostya Zolotarov]
 * a2c2637 2015-05-23 | Fixed package name [Kostya Zolotarov]
 * 5f969a6 2015-05-23 | Added build to instal/uninstall scripts [Kostya Zolotarov]
